[gd_scene load_steps=51 format=2]

[ext_resource path="res://characters/enemy/OgreMagi.png" type="Texture" id=1]
[ext_resource path="res://texture/Shadows/Тень_куст.png" type="Texture" id=2]
[ext_resource path="res://boxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://characters/enemy/OgreMagi.gd" type="Script" id=4]
[ext_resource path="res://characters/enemy/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://characters/enemy/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://boxes/Hitbox.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]
resource_name = "AttackDown"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Model:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=2]
resource_name = "AttackLeft"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Model:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=3]
resource_name = "AttackRight"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Model:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 31, 30, 29, 28 ]
}

[sub_resource type="Animation" id=4]
resource_name = "AttackUp"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Model:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Death"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Model:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 18 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "death_animation_finished"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "Idle"
length = 2.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Model:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=43]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Model:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 12 ]
}

[sub_resource type="Animation" id=7]
resource_name = "RunDown"
length = 0.7
loop = true
step = 0.175
tracks/0/type = "value"
tracks/0/path = NodePath("Model:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.175, 0.35, 0.525 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=8]
resource_name = "RunLeft"
length = 0.7
loop = true
step = 0.175
tracks/0/type = "value"
tracks/0/path = NodePath("Model:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.175, 0.35, 0.525 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=9]
resource_name = "RunRight"
length = 0.7
loop = true
step = 0.175
tracks/0/type = "value"
tracks/0/path = NodePath("Model:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.175, 0.35, 0.525 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=10]
resource_name = "RunUp"
length = 0.7
loop = true
step = 0.175
tracks/0/type = "value"
tracks/0/path = NodePath("Model:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.175, 0.35, 0.525 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "AttackDown"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "AttackUp"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "AttackRight"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "AttackLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id=16]
blend_point_0/node = SubResource( 12 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 13 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 14 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 15 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "Death"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "Death"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "Death"

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "Death"

[sub_resource type="AnimationNodeBlendSpace2D" id=17]
blend_point_0/node = SubResource( 36 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 37 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 38 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 39 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "Idle"

[sub_resource type="AnimationNodeBlendSpace2D" id=22]
blend_point_0/node = SubResource( 18 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 19 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 20 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 21 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "RunDown"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "RunUp"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "RunLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id=27]
blend_point_0/node = SubResource( 23 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 24 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 25 )
blend_point_2/pos = Vector2( 0, -1.1 )
blend_point_3/node = SubResource( 26 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachine" id=34]
states/Attack/node = SubResource( 16 )
states/Attack/position = Vector2( 697, 249 )
states/Death/node = SubResource( 17 )
states/Death/position = Vector2( 543, 333 )
states/Idle/node = SubResource( 22 )
states/Idle/position = Vector2( 543, 249 )
states/Run/node = SubResource( 27 )
states/Run/position = Vector2( 543, 168 )
transitions = [ "Idle", "Run", SubResource( 28 ), "Run", "Idle", SubResource( 29 ), "Death", "Idle", SubResource( 30 ), "Idle", "Death", SubResource( 31 ), "Attack", "Idle", SubResource( 32 ), "Idle", "Attack", SubResource( 33 ) ]
start_node = "Idle"
graph_offset = Vector2( -3, 191 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=35]

[sub_resource type="CapsuleShape2D" id=11]
radius = 3.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=42]
radius = 12.0
height = 14.0

[sub_resource type="CapsuleShape2D" id=40]
radius = 8.0
height = 18.0

[sub_resource type="CircleShape2D" id=41]
radius = 100.0

[node name="OgreMagi" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="Shadow" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Model" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -16 )
hframes = 44
frame = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackDown = SubResource( 1 )
anims/AttackLeft = SubResource( 2 )
anims/AttackRight = SubResource( 3 )
anims/AttackUp = SubResource( 4 )
anims/Death = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/RESET = SubResource( 43 )
anims/RunDown = SubResource( 7 )
anims/RunLeft = SubResource( 8 )
anims/RunRight = SubResource( 9 )
anims/RunUp = SubResource( 10 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 34 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 35 )
parameters/Attack/blend_position = Vector2( 0, 0 )
parameters/Death/blend_position = Vector2( 0, 0 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Run/blend_position = Vector2( 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
rotation = 1.5708
shape = SubResource( 11 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -2, -16 )
shape = SubResource( 42 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -16 )
shape = SubResource( 40 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 6

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 0, 1, 0.184314 )
shape = SubResource( 41 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
